chore: jvmArgs for pitest
Signed-off-by: Joke de Buhr <joke@xckk.de>